# quickjs-android

./: README.md  gradle.properties  native.sh  note.md  settings.gradle
app/: build.gradle
app/src/main/java/com/quickjs/android/example/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/main/res/values-night/: themes.xml
example/: build.gradle
example/src/androidTest/java/com/quickjs/android/: ExampleInstrumentedTest.kt
example/src/main/: AndroidManifest.xml
example/src/main/java/com/quickjs/android/example/: MainActivity.java
example/src/main/res/layout/: activity_main.xml
example/src/main/res/values/: themes.xml
example/src/test/java/com/quickjs/android/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
quickjs-android/: build.gradle
quickjs-android/src/androidTest/java/com/quickjs/: BaseTest.java  CommonJSModuleTest.java  ES6ModuleTest.java  EventQueueTest.java  JSArrayTest.java  JSContextTest.java  JSFunctionTest.java  JSObjectTest.java  JSValueTest.java  QuickJSExecutorTest.java  QuickJSExecutorTest2.java  QuickJSTest.java
quickjs-android/src/androidTest/java/com/quickjs/android/: ExampleInstrumentedTest.java  JSArrayTest.java  JSContextTest.java  JSFunctionTest.java  JSObjectTest.java  JSValueTest.java  QuickJSTest.java
quickjs-android/src/androidTest/java/com/quickjs/plugin/: CommonJSPluginTest.java  ConsolePluginTest.java  SetTimeoutPluginTest.java  WorkerPluginTest.java
quickjs-android/src/main/: AndroidManifest.xml
quickjs-android/src/main/cpp/: CMakeLists.txt  java-method-jni.cpp  native-lib.cpp  quickjs-jni.cpp
quickjs-android/src/main/cpp/quickjs/: CMakeLists.txt  CMakeLists.txt2.txt
quickjs-android/src/main/cpp/quickjs/quickjs/: quickjs.c  unicode_gen.c
quickjs-android/src/main/java/com/quickjs/: CommonJSModule.java  ES6Module.java  EventQueue.java  JSArray.java  JSContext.java  JSFunction.java  JSLocker.java  JSObject.java  JSValue.java  JavaCallback.java  JavaConstructorCallback.java  JavaVoidCallback.java  Module.java  Plugin.java  QuickJS.java  QuickJSException.java  QuickJSExecutor.java  QuickJSNative.java  QuickJSNativeImpl.java  QuickJSScriptException.java  ThreadChecker.java  ThreadLocker.java
quickjs-android/src/main/java/com/quickjs/android/: JSArray.java  JSContext.java  JSFunction.java  JSLocker.java  JSObject.java  JSValue.java  JavaCallback.java  JavaVoidCallback.java  MethodDescriptor.java  QuickJS.java  Undefined.java
quickjs-android/src/main/java/com/quickjs/plugin/: BasePlugin.java  CommonJSPlugin.java  ConsolePlugin.java  Plugin.java  SetTimeoutPlugin.java  WorkerPlugin.java
quickjs-android/src/test/java/com/quickjs/: ModuleTest.java
quickjs-android/src/test/java/com/quickjs/android/: ExampleUnitTest.java
scripts/: commonjs.js
